--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,17 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-family: Pretendard, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  word-break: keep-all;
+  overflow: hidden;
+}
+
 #container {
   width: 100vw;
   height: 100vh;
@@ -10,9 +24,70 @@
   height: 100%;
 }
 #controler {
-  width: 20%;
+  width: 30%;
   height: 100%;
   background-color: white;
+  flex-shrink: 0;
+}
+#controler-info {
+  border-bottom: 1px solid black;
+}
+.info-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 3rem;
+  border-bottom: 1px solid black;
+}
+.info-title {
+  margin-left: 1rem;
+}
+.info-lang {
+  margin-right: 1rem;
+  font-size: 24px;
+}
+.info-content {
+  padding: 1rem;
+}
+/* #slider-form {
+
+} */
+.slider-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 2rem;
+  border-bottom: 1px solid black;
+}
+.control-label {
+  width: 50%;
+  text-align: center;
+  white-space: nowrap;
+  flex: 0 0 auto;
+}
+.slider {
+  width: 50%;
+  border-left: 1px solid black;
+  text-align: center;
+  -webkit-appearance: none;
+  appearance: none;
+  background: white;
+  transition: background 0.075s;
+  flex: 1;
+}
+.slider:hover {
+  background: gainsboro;
+}
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 1rem;
+  height: calc(2rem - 1px);
+  /* border: 1px solid white; */
+  background: black;
+  cursor: pointer;
 }
 #resize-handle {
   position: relative;
@@ -20,15 +95,20 @@
   height: calc(var(--vh) * 100);
   border-left: 1px solid black;
   border-right: 1px solid black;
+  background: white;
   cursor: col-resize;
   touch-action: none;
   transition: 0.075s;
+  flex-shrink: 0;
 }
 #resize-handle:hover {
+  background: gainsboro;
   transition: 0.075s;
 }
 #resize-handle:active {
+  background: white;
   transition: 0.075s;
+  z-index: 99999;
 }
 #resize-handle::after {
   content: "";
@@ -43,13 +123,37 @@
   transform: translate(-50%, -50%);
   transition: 0.075s ease-out;
 }
+#resize-handle:hover::after {
+  background: black;
+}
 #resize-handle:active::after {
   height: 40px;
   background: black;
 }
 #p5canvas {
-  width: 80%;
+  position: relative;
+  width: 70%;
+  flex-shrink: 0;
 }
 #p5canvas canvas {
   display: block;
+}
+
+#click-overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background-color: dimgray;
+  opacity: 0;
+  transition: 0.08s;
+  pointer-events: none;
+  /* cursor: col-resize; */
+}
+#click-overlay.active {
+  pointer-events: all;
+  z-index: 100;
+  opacity: 0.2;
+  transition: opacity 0.08s;
 }
